--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,10 +22,21 @@ html {
     font-family: 'Work Sans', sans-serif;
 }
 
-body {
+/* body {
     overflow-x: hidden;
-}
+} */
 
+html, body {
+    max-width: 100vw;
+    overflow-x: hidden;
+    margin: 0;
+    padding: 0;
+  }
+  
+  *, *::before, *::after {
+    box-sizing: border-box;
+  }
+  
 body.transition {
     animation: fadeInAnimation ease 2s forwards;
 }
@@ -89,8 +100,8 @@ body.transition {
 }
 
 .nav li a.nav-item-music {
-    transform: translateY(-20%);
-    font-size: 70px;
+    transform: translateY(-10%);
+    font-size: 60px;
     color: var(--black);
     top: -30px;
     transition: transform 0.5s cubic-bezier(0.175,0.885,0.32,1.275);
@@ -622,5 +633,10 @@ h1, .section-title h3 {
       margin-left: -25px !important;
       top: 10px;
     }
+  }
+  
+  /* Tambahkan sementara CSS ini untuk debug: */
+  * {
+    outline: 1px solid red; /* supaya kelihatan batas elemen */
   }
   
